modified:   1.html 	modified:   2.html 	modified:   3.html 	modified:   index.html 	renamed:    style.css -> style/style.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>WEB1 - Welcome</title>
-    <meta charset="utf-utf-8">
+    <meta charset="utf-8">
     <link rel="stylesheet" href="./style/style.css" />
   </head>
 
