--- a/2.html
+++ b/2.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>WEB1 - HTML</title>
-  <meta charset="utf-utf-8">
+  <meta charset="utf-8">
   <link rel="stylesheet" href="./style/style.css" />
 </head>
 
