--- a/box.html
+++ b/box.html
@@ -8,7 +8,7 @@
         border: 5px solid red;
         padding: 20px;
         margin: 20px;
-        display: blick;
+        display: block;
         width: 100px;
       }
     </style>
