--- a/1.html
+++ b/1.html
@@ -14,6 +14,7 @@
       <li><a href="1.html">HTML</a></li>
       <li><a href="2.html">CSS</a></li>
       <li><a href="3.html">Javascript</a></li>
+      <li><a href="history.html">history</a></li>
     </ol>
 
     <div id="article">
